# vpn-leaks

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  RUN-STEPS.md  progress.md  pyproject.toml  vpn-leaks.md
.github/workflows/: pages.yml
VPNs/: NORDVPN.html  NORDVPN.md  sample_bluf.html
configs/framework/: classification_rules.yaml  questions.yaml  report_hints.yaml  test_matrix.yaml
configs/tools/: attribution.yaml  (+1 more)
docs/: bgp-tools.md  competitive-capture-playbook.md  competitor-probe-checklist.md  data-dictionary.md  fd-graph.md  framework.md  github-actions-ci.yml.example  methodology.md  protection-gap-coverage-plan.md  research-questions-and-evidence.md  spec.md  website-exposure-methodology.md
research/: desk-exposure-template.md
scripts/: build_bgp_db.py  build_github_pages_site.py  desk_dns_audit.sh  vpn_leaks.py
tests/: test_asn_prefixes.py  test_auto_connection.py  test_benchmark_location.py  test_capture_session.py  test_classify_contact_role.py  test_competitor_probes.py  test_config_loader.py  test_cymru.py  test_dns.py  test_exposure_graph.py  test_framework.py  test_har_summary.py  test_methodology_config.py  test_methodology_email_dns.py  test_models.py  test_pcap_host_intelligence.py  test_pcap_summarize.py  test_policy_fetch.py  test_run_progress.py  test_vpn_config_locations.py  test_vpn_report_detailed.py  test_vpn_report_html.py  test_yourinfo_probe.py
viewer/: README.md  index.html
vpn_leaks/: __init__.py  auto_connection.py  cli.py  config_loader.py  models.py  run_manifest.py  run_progress.py  vpn_config_locations.py
(+406 files in other folders)
